lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  	for (i <- 0 to Liste.length-1) {
        ^Lander:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  	return plat
        ^